--- a/proyecto_ResComput/librerias/login/stylesLogin.css
+++ b/proyecto_ResComput/librerias/login/stylesLogin.css
@@ -1,8 +1,8 @@
 body {
     font-family: "Lato", sans-serif;
-    background-image: url('./Wallpaper.webp');
+    background-image: url('./Wallpaper.png');
     background-size:cover;
-    background-repeat: no-repeat;
+    background-repeat:repeat;
     height: 100%;
     font-family: 'Numans', sans-serif;
 }
